--- a/Project/Pages/creatProject.xaml
+++ b/Project/Pages/creatProject.xaml
@@ -66,40 +66,43 @@
                 <Label Content="Участники проекта"
                        FontFamily="Malgun Gothic" FontWeight="Bold" FontSize="14"/>
 
-                <Button Content="Добавить участника" Width="150" Margin="0,10,0,10"
-                        HorizontalAlignment="Left" Background="#FF0F0FE3" Foreground="White" Click="Bt_AddUsers"/>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
+                    <ComboBox x:Name="cmbParticipants" Width="200" Margin="0,0,10,0">
+                        <ComboBoxItem Content="Участник 1"/>
+                        <ComboBoxItem Content="Участник 2"/>
+                        <ComboBoxItem Content="Участник 3"/>
+                    </ComboBox>
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton x:Name="rbAdmin" Content="Администратор" Margin="0,0,10,0" GroupName="Role"/>
+                        <RadioButton x:Name="rbUser" Content="Пользователь" Margin="0,0,10,0" GroupName="Role" IsChecked="True"/>
+                    </StackPanel>
+                    <Button x:Name="btAddUser" Content="Добавить участника" Width="150" Margin="10,0,0,0"
+                            HorizontalAlignment="Left" Background="#FF0F0FE3" Foreground="White" Click="Bt_AddUsers"/>
+                </StackPanel>
 
                 <ListView x:Name="listViewParticipants">
-                    <ListViewItem>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Content="Фамилия Имя Отчество"/>
-                            <Button Grid.Column="1" Content="✕" Foreground="Red" Background="Transparent"
-                                    BorderThickness="0" FontWeight="Bold" Margin="582,0,-609,0"
-                                    ToolTip="Удалить участника"/>
-                        </Grid>
-                    </ListViewItem>
-                    <ListViewItem>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Content="Фамилия Имя Отчество"/>
-                            <Button Grid.Column="1" Content="✕" Foreground="Red" Background="Transparent"
-                                    BorderThickness="0" FontWeight="Bold" Margin="585,0,-606,0"
-                                    ToolTip="Удалить участника"/>
-                        </Grid>
-                    </ListViewItem>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Label Content="{Binding Name}" />
+                                <Label Grid.Column="1" Content="{Binding Role}" />
+                                <Button x:Name="btRemoveUser" Grid.Column="2" Content="✕" Foreground="Red" Background="Transparent"
+                                        BorderThickness="0" FontWeight="Bold"
+                                        Click="RemoveParticipant_Click"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
                 </ListView>
             </StackPanel>
             <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Отмена" Width="100" Height="30" Margin="0,0,10,0"
+                <Button x:Name="btCancel" Content="Отмена" Width="100" Height="30" Margin="0,0,10,0"
                         Click="Bt4_Cancel"/>
-                <Button Content="Создать" Width="100" Height="30"
+                <Button x:Name="btCreate" Content="Создать" Width="100" Height="30"
                         Background="#FF0F0FE3" Foreground="White"
                         Click="Bt4_Create"/>
             </StackPanel>
