--- a/Project/Pages/AddSubtask.xaml
+++ b/Project/Pages/AddSubtask.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Background="White" Padding="10">
-            <Label Content="Добавление подзадачи" FontFamily="Verdana" Foreground="#FFA6A6A6"/>
+            <Label Content="{Binding Title}" FontFamily="Verdana" Foreground="#FFA6A6A6"/>
         </Border>
         <Border Grid.Row="1" Background="White" Margin="10,10,10,10" CornerRadius="10">
             <Grid>
@@ -29,18 +29,22 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" Content="Наименование" Margin="10" VerticalAlignment="Center" FontFamily="Verdana"/>
-                <TextBox Grid.Column="1" Margin="10,0,10,0" Height="30" VerticalAlignment="Center" Text="{Binding SubtaskName}" FontFamily="Verdana"/>
+                <TextBox x:Name="name" Grid.Column="1" Margin="10,0,10,0" Height="30" VerticalAlignment="Center" FontFamily="Verdana"/>
 
                 <Label Grid.Row="1" Grid.Column="0" Content="Описание" Margin="10,0,10,0" VerticalAlignment="Center" FontFamily="Verdana"/>
-                <TextBox Grid.Row="1" Grid.Column="1" Margin="10,0,10,0" Height="60" VerticalAlignment="Center" AcceptsReturn="True"
-                 Text="Опишите подробности" Foreground="#FFA6A6A6" FontFamily="Verdana"/>
+                <TextBox x:Name="description" Grid.Row="1" Grid.Column="1" Margin="10,0,10,0" Height="60" VerticalAlignment="Center" 
+                         AcceptsReturn="True" Text="Опишите подробности" Foreground="#FFA6A6A6" FontFamily="Verdana"/>
 
                 <Label Grid.Row="2" Grid.Column="0" Content="Ответственный" Margin="10,5,10,3" FontFamily="Verdana"/>
-                <ComboBox Text="Выбрать" Grid.Row="2" Grid.Column="1" Margin="10,3,10,0" Height="30" VerticalAlignment="Top" ItemsSource="{Binding ResponsiblePersons}" SelectedItem="{Binding SelectedResponsiblePerson}" BorderBrush="White" Background="#FFE5E5E5" FontFamily="Verdana"/>
+                <ComboBox x:Name="кesponsible" Grid.Row="2" Grid.Column="1" Margin="10,3,10,0" Height="30" VerticalAlignment="Top" 
+                          BorderBrush="White" Background="#FFE5E5E5" FontFamily="Verdana"
+                          DisplayMemberPath="FullName"/>
 
                 <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button  Content="Отмена" Margin="10" Padding="10,5" Background="White" Click="Bt_Cancel" Foreground="#FF0F0FE3" BorderBrush="White" Width="120" FontFamily="Verdana"/>
-                    <Button Content="Добавить" Margin="10" Padding="10,5" Background="#FF0F0FE3" Foreground="White" Click="Bt_AddS" BorderBrush="#FF0F0FE3" Width="120" Height="30" FontFamily="Verdana"/>
+                    <Button x:Name="bt_Cancel" Click="Bt_Cancel" Content="Отмена" Margin="10" Padding="10,5" 
+                            Background="White" Foreground="#FF000083" BorderBrush="White" Width="120" FontFamily="Verdana"/>
+                    <Button x:Name="bt_Add" Click="Bt_AddS" Content="{Binding ButtonText}" Margin="10" Padding="10,5" 
+                            Background="#FF000083" Foreground="White" BorderBrush="#FF000083" Width="120" Height="30" FontFamily="Verdana"/>
                 </StackPanel>
             </Grid>
         </Border>
