--- a/Project/Main/TaskCard.xaml
+++ b/Project/Main/TaskCard.xaml
@@ -1,41 +1,14 @@
 ﻿<UserControl x:Class="Project.Main.TaskCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Project.Main"
-             mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="300"
-             x:Name="root">
-
-    <Border CornerRadius="10" Background="White" Padding="20"
-            BorderThickness="1" BorderBrush="#EEEEEE" Margin="0,10,0,10">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-
-            <TextBlock Grid.Row="0" Text="{Binding TaskNumber, ElementName=root, StringFormat=№{0}}" 
-                       FontFamily="Verdana" Foreground="#FF898989"
-                       Margin="0,0,0,5"/>
-
-            <TextBlock Grid.Row="1" Text="{Binding TaskName, ElementName=root}" 
-                       FontFamily="Verdana" FontWeight="Bold" FontSize="16"
-                       TextWrapping="Wrap" Margin="0,0,0,5"/>
-
-            <TextBlock Grid.Row="2" Text="{Binding Responsible, ElementName=root, StringFormat=Ответственный: {0}}" 
-                       FontFamily="Verdana" Margin="0,0,0,5"/>
-
-            <Button Grid.Row="4" Content="К подзадачам" 
-                    Background="#FF000083" Foreground="White" 
-                    FontFamily="Verdana" Height="35" Margin="-3,20,3,19" 
-                    BorderBrush="#FF000083" Click="TaskButton_Click" Grid.RowSpan="2"/>
-        </Grid>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="228">
+    <Border Background="LightGray" CornerRadius="5" Padding="5" Margin="5">
+        <StackPanel>
+            <TextBlock Text="{Binding TaskNumber, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Задача #{0}'}" FontWeight="Bold" FontFamily="Verdana" FontSize="9"/>
+            <TextBlock Text="{Binding TaskName, RelativeSource={RelativeSource AncestorType=UserControl}}" TextWrapping="Wrap" FontFamily="Verdana" FontSize="9"/>
+            <TextBlock Text="{Binding Responsible, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Ответственные: {0}'}" FontStyle="Italic" FontFamily="Verdana" FontSize="8"/>
+            <TextBlock Text="{Binding ProjectCode, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Код проекта: {0}'}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
+            <TextBlock Text="{Binding ProjectName, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat='Проект: {0}'}" Foreground="Blue" FontFamily="Verdana" FontSize="9"/>
+            <Button Content="Подзадачи" Click="TaskButton_Click" Margin="0,5,0,0" BorderBrush="#FF000083" Background="#FF000083" Foreground="White" FontFamily="Verdana"/>
+        </StackPanel>
     </Border>
 </UserControl>
